<resources>
    <string name="app_name">ULesson</string>
    <string name="hello_simbi">Hello Simbi</string>
    <string name="recently_watched_videos">Recently Watched Videos</string>
    <string name="view_all">View All</string>
    <string name="retry">Retry</string>
    <string name="see_less">See less</string>
    <string name="live_lessons">Live Lessons</string>
    <string name="empty_live_lessons_title">Oops! Try again later</string>
    <string name="empty_live_lesson_description">There are no live lessons for this subject at the moment</string>
    <string name="my_lessons">My Lessons</string>
    <string name="empty_me_lessons_title">Your timetable is empty</string>
    <string name="empty_me_lesson_description">Click remind me to add lessons to your timetable</string>
    <string name="add_live_lessons">Add live lessons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>