<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ulessonapp.screens.live.LiveFragment">

    <data>

        <variable
            name="viewModel"
            type="com.efedaniel.ulesson.ulessonapp.screens.live.LiveViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

                <LinearLayout
                    android:id="@+id/toolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:padding="16dp"
                        android:src="@drawable/ic_back_button" />

                    <TextView
                        android:id="@+id/subjectNameTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/muli_semibold"
                        android:maxLines="1"
                        android:text="@string/live_lessons"
                        android:textColor="@color/text_color"
                        android:textSize="24sp" />

                </LinearLayout>

                <com.efedaniel.ulesson.common.customviews.AutoScrollViewPager
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/holo_orange_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:dotsColor="@color/dots_inactive_color"
                    app:dotsCornerRadius="5dp"
                    app:dotsSize="10dp"
                    app:dotsSpacing="12dp"
                    app:dotsWidthFactor="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/carousel"
                    app:selectedDotColor="@color/dots_active_color" />

                <Spinner
                    android:id="@+id/subjectSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dotsIndicator" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lessonRecyclerView"
                    liveLessonList="@{viewModel.liveLessons}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:focusable="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/subjectSpinner"
                    app:layout_constraintVertical_bias="0.0"
                    tools:itemCount="3"
                    tools:layout_editor_absoluteX="20dp"
                    tools:listitem="@layout/item_live_lesson" />

                <com.efedaniel.ulesson.common.customviews.EmptyView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="24dp"
                    app:emptyDescription="@string/empty_live_lesson_description"
                    app:emptyImage="@drawable/ic_live_lesson_empty"
                    app:emptyTitle="@string/empty_live_lessons_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lessonRecyclerView"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_calendar"
            app:backgroundTint="@color/purple"
            app:tint="@color/white" />

    </FrameLayout>

</layout>
